<resources>
    <string name="app_name" translatable="false">piley</string>

    <!--Nav locations-->
    <string name="pile" translatable="false">Pile</string>
    <string name="piles" translatable="false">Piles</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="splash_screen" translatable="false">Splash Screen</string>
    <string name="introduction_screen" translatable="false">Introduction Screen</string>
    <string name="daily_pile_name">Daily</string>

    <!--notifications-->
    <string name="reminder_notification_channel_title" translatable="false">Reminder</string>
    <string name="reminder_notification_channel_description" translatable="false">Reminder</string>
    <string name="reminder_complete_action">Complete</string>
    <string name="reminder_delay_action">Delay</string>
    <string name="reminder_custom_delay_action">Delay by…</string>
    <string name="cancel_delay_button">Don\'t Delay</string>
    <string name="confirm_delay_button">Delay</string>
    <string name="delay_title">Delay this Task</string>
    <!-- common strings -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- generic ui views -->
    <string name="no_pile_completed_hint">Looks like you haven\'t completed any tasks for this pile in a while…</string>
    <string name="add_description_hint">Click here to add a description</string>

    <!-- pile screen -->
    <string name="add_task_placeholder">Add your task here</string>
    <string name="task_empty_not_allowed_hint">Task can\'t be empty</string>
    <string name="pile_full_warning">This pile is already full!</string>
    <string name="no_tasks_left_message">Looks like there are no tasks left.\nClick on the field below to create a new one</string>
    <string name="no_tasks_yet_message">Looks like there are no tasks yet.\nClick on the field below to create a new one</string>
    <string name="recurring_task_completed_info">Task completed! Next due date: %1$s</string>
    <string name="complete_recurring_task_dialog_title">Complete recurring task</string>
    <string name="delete_task_dialog_title">Delete Task</string>
    <string name="delete_task_dialog_description">Are you sure you want to delete this task?</string>
    <string name="delete_task_dialog_confirm_button">Delete</string>
    <string name="complete_recurring_task_dialog_description">Are you sure you want to complete this recurring task ahead of its due date (%1$s)?</string>
    <string name="complete_recurring_task_dialog_confirm">Complete</string>
    <string name="delete_recurring_dialog_title">Delete recurring task</string>
    <string name="delete_recurring_dialog_description">Are you sure you want to delete this recurring task? All future reminders will be canceled.</string>
    <string name="delete_recurring_dialog_confirm">Yes</string>
    <string name="task_deleted_message">Task deleted</string>
    <string name="undo_task_deleted">Undo</string>

    <!-- pile detail screen -->
    <string name="delete_pile_button_text">Delete</string>

    <!-- clear statistics dialog -->
    <string name="clear_statistics_dialog_title">Clear all pile statistics</string>
    <string name="clear_statistics_dialog_description">This is will clear all statistics of this pile by deleting all completed and deleted tasks, except for recurring ones.\nDo you want to continue?</string>
    <string name="clear_statistics_dialog_confirm">Continue</string>

    <!-- pile statistics section -->
    <string name="statistics_section_title">Statistics</string>
    <string name="clear_statistics_button_text">Clear Statistics</string>

    <!-- pile settings -->
    <string name="pile_settings_section_title">Settings</string>
    <string name="pile_mode_setting_title">Pile mode</string>
    <string name="pile_mode_setting_description">Set the task completion mode for this pile.</string>
    <string name="pile_mode_setting_dropdown_label">Pile Mode</string>
    <string name="pile_limit_setting_title">Pile Limit</string>
    <string name="pile_limit_setting_description">Set the limit of tasks in a pile. 0 means no limit</string>

    <!-- pile overview screen -->
    <string name="add_pile_button">Add Pile</string>

    <!-- create pile dialog -->
    <string name="create_pile_dialog_title">Create a Pile</string>
    <string name="pile_title_hint">Pile Title</string>
    <string name="pile_create_dialog_confirm_button_text">Create Pile</string>
    <string name="pile_create_dialog_dismiss_button_text">Cancel</string>

    <!-- delete pile dialog -->
    <string name="delete_pile_dialog_title">Delete Pile</string>
    <string name="delete_pile_dialog_description">Are you sure you want to delete this pile? This will also affect user statistics since all tasks in the pile will be deleted.</string>
    <string name="delete_pile_dialog_confirm_button">Yes</string>

    <!-- user profile sections -->
    <string name="user_statistics_section_title">Statistics</string>
    <string name="upcoming_tasks_section_title">Upcoming Tasks</string>
    <string name="done_tasks_label">Done</string>
    <string name="current_tasks_label">Current</string>
    <string name="deleted_tasks_label">Deleted</string>
    <string name="tasks_completed_past_days_label">Tasks completed in the last 7 days:</string>
    <string name="biggest_pile_label">Biggest Pile right now:</string>
    <string name="no_upcoming_tasks_hint">No upcoming tasks</string>
    <string name="no_pile">None</string>

    <!-- delete user dialog -->
    <string name="delete_user_dialog_title">Delete user</string>
    <string name="delete_user_dialog_description">Are you sure you want to delete this user?</string>
    <string name="delete_user_dialog_cancel_button">Cancel</string>
    <string name="delete_user_dialog_confirm_button">Delete</string>

    <!-- edit user dialog -->
    <string name="edit_user_dialog_title">Modify your personal data here.</string>
    <string name="user_name_hint">Your Name</string>
    <string name="edit_user_dialog_cancel_button">Cancel</string>
    <string name="edit_user_dialog_confirm_button">Update</string>

    <!-- settings screen -->
    <string name="settings_screen_title">@string/settings</string>

    <!-- appearance settings section-->
    <string name="settings_section_appearance_title">Appearance</string>
    <string name="night_mode_enabled_setting_title">Night mode enabled</string>
    <string name="night_mode_enabled_setting_description">Set whether night mode is enabled.</string>
    <string name="night_mode_enabled_setting_option_label">Night Mode</string>
    <string name="dynamic_color_enabled_setting_title">Dynamic Color enabled</string>
    <string name="dynamic_color_enabled_setting_description">Set whether dynamic color is enabled.</string>

    <!-- piles settings section-->
    <string name="settings_section_piles_title">Piles</string>
    <string name="default_pile_mode_setting_title">Default pile mode</string>
    <string name="default_pile_mode_setting_description">Set the default task completion mode for piles.</string>
    <string name="default_pile_mode_setting_option_label">Pile Mode</string>
    <string name="reset_all_pile_modes_setting_title">Reset all pile modes</string>
    <string name="reset_all_pile_modes_setting_description">Reset all pile modes to the default of \"Free\"</string>
    <string name="automatically_hide_keyboard_setting_title">Automatically hide keyboard</string>
    <string name="automatically_hide_keyboard_setting_description">Automatically hide the keyboard after creating a new task.</string>
    <string name="show_recurring_tasks_setting_title">Show recurring tasks</string>
    <string name="show_recurring_tasks_setting_description">Recurring tasks are shown together with regular tasks by default.</string>

    <!-- piles settings section-->
    <string name="settings_section_notifications_title">Notifications</string>
    <string name="reminder_delay_duration_setting_title">Default Reminder Delay Duration</string>
    <string name="reminder_delay_duration_setting_description">Set the default duration for the \"Delay\" button in your task reminders.</string>

    <!-- user settings section-->
    <string name="settings_section_user_title">User</string>
    <string name="update_user_setting_title">Update User</string>
    <string name="update_user_setting_description">Update the current user data</string>
    <string name="delete_user_setting_title">Delete User</string>
    <string name="delete_user_setting_description">Delete the current user permanently</string>
    <string name="delete_user_error_wrong_password">Error deleting user: Your password is incorrect</string>
    <string name="delete_user_success_info">User deleted, signing out</string>
    <string name="update_user_error_wrong_password">Error updating user: Your password is incorrect</string>
    <string name="user_update_success_info">User updated successfully!</string>
    <string name="start_tutorial_setting_title">Start the Tutorial again</string>
    <string name="start_tutorial_setting_description">Click here if you want to see the tutorial again.</string>

    <!-- add reminder sheet -->
    <string name="edit_reminder_title">Edit reminder</string>
    <string name="add_reminder_title">Add reminder</string>
    <string name="date_selection_placeholder">Pick a date</string>
    <string name="time_selection_placeholder">Pick a time</string>
    <string name="reminder_recurring_label">Recurring</string>
    <string name="reminder_frequency_label">Frequency</string>
    <string name="no_notification_permission_reminder_warning">This reminder won\'t show up because you haven\'t enabled notifications.</string>
    <string name="set_reminder_button">Set Reminder</string>
    <string name="update_reminder_button">Update</string>
    <string name="delete_reminder_button">Delete</string>
    <string name="reminder_time_range_label">Time Range</string>
    <string-array name="time_of_day">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
    </string-array>
    <string name="reminder_use_now_description">Use now as reminder calculation date</string>
    <string name="tomorrow_prefix">Tomorrow</string>
    <string name="time_suggestion">%1$s%2$s (%3$s)</string>
    <string name="confirm_date_time_picker_button">Confirm</string>
    <string name="cancel_date_time_picker_button">Cancel</string>

    <!-- task detail screen -->
    <string name="reminder_info_title">Reminder</string>
    <string name="no_reminder_set_placeholder">No reminder set</string>
    <string name="complete_task_button">Complete</string>
    <string name="delete_task_button">Delete</string>
    <string name="task_info_title">Other Information</string>
    <string name="task_created_at_label">Created at:</string>
    <string name="task_modified_at_label">Modified at:</string>
    <string name="task_last_completed_at_label">Last completed at:</string>

    <!-- notification permission dialog -->
    <string name="notification_permission_dialog_title">Notification permission needed</string>
    <string name="notification_permission_dialog_description">This app needs the notification permission to show you reminders about your tasks.</string>
    <string name="notification_permission_dialog_confirm_button">Grant Permission</string>

    <!--preferences and enums-->
    <string-array name="night_modes">
        <item>System</item>
        <item>Enabled</item>
        <item>Disabled</item>
    </string-array>
    <string-array name="pile_modes">
        <item>Free</item>
        <item>FIFO</item>
        <item>LIFO</item>
    </string-array>

    <!--reminder frequency-->
    <string name="reminder_repeat_frequency_value">Repeats: Every %1$s</string>
    <string-array name="time_range">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <plurals name="plural_s">
        <item quantity="one" />
        <item quantity="other">s</item>
    </plurals>
    <!--reminder delay-->
    <string-array name="delay_by">
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
    </string-array>

    <!-- intro screen -->
    <string name="finish_intro_button">Start Piling</string>

    <!-- intro screen pages -->
    <string name="welcome_page_title">Hi there</string>
    <string name="welcome_page_description">Welcome to piley! This app allows you to manage regular and one-time tasks by displaying them in piles.</string>
    <string name="pile_page_title">Pile</string>
    <string name="pile_page_description">A pile is like the name says - a pile of your tasks. Click on the bottom to create a new task, or swipe tasks away to complete them.</string>
    <string name="piles_page_title">Piles</string>
    <string name="recurring_pile_page_title">Recurring Tasks</string>
    <string name="recurring_pile_page_description">If you set a recurring reminder for a task, a clock button will appear on the bottom right to toggle these tasks in your pile.</string>
    <string name="piles_page_description">Manage your piles by going to the pile details with a long press, or immediately jump to that pile with a click.</string>
    <string name="profile_page_title">Profile</string>
    <string name="profile_page_description">You can also see general statistics and upcoming tasks by going to the profile section.</string>
    <string name="end_page_title">Almost there</string>
    <string name="end_page_description">That\'s it! Click on the button to start using the app, and have fun with piley!</string>
    <string name="first_user_name_hint">e.g. John Doe</string>
</resources>