...
        PickerSection(
            modifier = Modifier.padding(horizontal = dim.large),
            text = localDate?.dateString() ?: (initialDateTime?.date?.dateString()
                ?: stringResource(Res.string.date_selection_placeholder)),
            icon = Icons.Default.Event,
            onIconClick = { datePickerVisible = true },
            iconContentDescription = "set the date for a reminder"
        )
        BigSpacer()
        PickerSection(
            modifier = Modifier.padding(horizontal = dim.large),
            text = localTime?.timeString() ?: (
                    with(initialDateTime?.time) {
...
                                this.second
                            )
                        }
                    }?.timeString() ?: stringResource(Res.string.time_selection_placeholder)),
            icon = Icons.Default.Schedule,
            onIconClick = { timePickerVisible = true },
            iconContentDescription = "set the time for a reminder"
        )
        MediumSpacer()
        ReminderTimeSuggestions(
            onSelectTimeSuggestion = {
                localDate = it.date
                localTime = it.time
...
