...
                    onClick = onAddReminder,
                    enabled = addReminderButtonEnabled,
                    modifier = Modifier.padding(vertical = dim.medium, horizontal = dim.small)
                ) {
                    Icon(
                        imageVector = if (reminderSet) Icons.Default.Edit else Icons.Default.AddAlert,
                        "set or delete a task reminder",
                        modifier = Modifier
                            .align(Alignment.CenterVertically),
                        tint = if (reminderSet) MaterialTheme.colorScheme.secondary else MaterialTheme.colorScheme.primary
                    )
                }
            }
...
