...
            onClick = { onPageChanged(selectedPageIndex - 1) },
            enabled = selectedPageIndex != 0
        ) {
            Icon(
                Icons.AutoMirrored.Filled.ArrowLeft,
                tint = MaterialTheme.colorScheme.primary.copy(alpha = LocalContentColor.current.alpha),
                contentDescription = "switch to left pile"
            )
        }
        AnimatedContent(
            modifier = Modifier.weight(1f),
            targetState = selectedPageIndex,
            transitionSpec = {
...
            onClick = { onPageChanged(selectedPageIndex + 1) },
            enabled = selectedPageIndex != pileTitleList.lastIndex
        ) {
            Icon(
                Icons.AutoMirrored.Filled.ArrowRight,
                tint = MaterialTheme.colorScheme.primary.copy(alpha = LocalContentColor.current.alpha),
                contentDescription = "switch to right pile"
            )
        }
    }
}

@ExperimentalAnimationApi
...
