...
@Preview
@Composable
fun ComposablePreview() {
    PileyTheme(useDarkTheme = true) {
        TextWithCheckbox(
            modifier = Modifier.fillMaxWidth(),
            description = "some description",
            checked = false
        )
    }
}

@Preview
...
