...
        modifier = modifier,
        floatingActionButton = {
            AnimatedVisibility(visible = expandedFab, enter = fadeIn(), exit = fadeOut()) {
                ExtendedFloatingActionButton(
                    onClick = { createPileDialogOpen = true },
                    expanded = false,
                    icon = { Icon(Icons.Filled.Add, "Add Pile Icon") },
                    text = { Text(text = stringResource(Res.string.add_pile_button)) },
                )
            }
        },
        floatingActionButtonPosition = FabPosition.End,
    ) { paddingValues ->
...
