package com.dk.piley.ui.signin

import com.dk.piley.model.user.User

val firstTimeUser = User(
    name = "John Doe",
    email = "john.doe@email2931238.com",
)
