...
                            name = viewState.userName
                        )
                        IconButton(onClick = onClickSettings) {
                            Icon(
                                Icons.Filled.Settings,
                                tint = MaterialTheme.colorScheme.secondary,
                                contentDescription = "go to settings"
                            )
                        }
                        if (viewState.showSyncScreen) {
                            IconButton(onClick = onClickSync) {
                                Icon(
                                    Icons.Filled.Sync,
...
