...
            )
        }
        IconButton(onClick = onClickBackup) {
            Icon(
                Icons.Filled.Backup,
                tint = MaterialTheme.colorScheme.primary,
                contentDescription = "create a new backup"
            )
        }
    }
}

@Preview
...
