appId: com.dk.piley
---
- tapOn: "Pile"
# task creation
- tapOn: "Add your task here"
- inputText: "upcoming task"
- pressKey: Enter
- tapOn: "upcoming task"
- tapOn: "set or delete a task reminder"
# select date
- tapOn: "set the date for a reminder"
- tapOn: "Switch to text input mode"
- tapOn: "Date"
- inputText: "08/17/2024"
- tapOn: "Confirm"
# select time
- tapOn: "set the time for a reminder"
- tapOn: "Switch to Text Input"
- inputText: "0900"
- tapOn: "PM"
- tapOn: "Confirm"
- tapOn: "Set Reminder"
# check if reminder set
- assertVisible: "8/17/24, 9:00 PM"
- back
- tapOn: "Profile"
- assertVisible: "upcoming task"
