appId: com.dk.piley
---
# task creation and edit
- tapOn: "Add your task here"
- inputText: "some task"
- pressKey: Enter
- assertVisible: "some task"
- tapOn: "some task"
- tapOn: "Click here to add a description"
- inputText: "some description"
- tapOn: "Reminder"
- assertVisible: "some description"
- back
# complete task
- swipe:
    start: "10%, 70%"
    end: "90%, 70%"
- assertNotVisible: "some task"
# pile section
- tapOn: "Piles"
- assertVisible: "1" # completed one task in daily pile
# pile creation
- tapOn: "Add Pile Icon"
- tapOn: "Pile Title"
- inputText: "some pile title"
- tapOn: "Create Pile"
- tapOn: "pile not selected as default"
- tapOn: "Pile"
# pile switching
- assertVisible: "some pile title"
- tapOn: "switch to left pile"
- assertVisible: "Daily"
- tapOn: "switch to right pile"
# create task in new pile
- tapOn: "Add your task here"
- inputText: "some task in pile 2"
- pressKey: Enter
- tapOn: "Piles"
- assertVisible: # one uncompleted task visible
    text: "1"
    index: 0
# pile edit and delete
- tapOn: "some pile title"
- tapOn: "Click here to add a description"
- inputText: "some description"
- tapOn: "Statistics"
- assertVisible: "some description"
- tapOn: "Delete"
- tapOn: "Yes"
- assertNotVisible: "some pile title"
# clear statistics of pile
- tapOn: "Daily"
- tapOn: "Clear Statistics"
- tapOn: "Continue"
- assertVisible:
    text: "0"
    index: 0
- back
